--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@
      height: max-content;
      margin: auto;
      font-family: var(--font-family);
+     overflow-x: hidden;
  }
  img{
     height: 100%;
